/*
  Party Routing Profile

  This service domain maintains a small profile of key indicators for a customer that is referenced during customer interactions to facilitate routing, servicing and product/service fulfillment decisions. This can include status (such as account in arrears), ratings (such as high value customer) and alerts (such possible fraud activity detected)

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.partyroutingprofile.v10.api.bqstatusservice;

import "google/protobuf/empty.proto";
import public "v10/model/capture_status_request.proto";
import public "v10/model/capture_status_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/retrieve_status_response.proto";
import public "v10/model/update_status_request.proto";
import public "v10/model/update_status_response.proto";

service BQStatusService {
  rpc CaptureStatus (CaptureStatusRequest) returns (CaptureStatusResponse);

  rpc RetrieveStatus (RetrieveStatusRequest) returns (RetrieveStatusResponse);

  rpc UpdateStatus (UpdateStatusRequest) returns (UpdateStatusResponse);

}

message CaptureStatusRequest {
  string partyroutingprofileId = 1;
  string statusId = 2;
  CaptureStatusRequest captureStatusRequest = 3;

}

message RetrieveStatusRequest {
  string partyroutingprofileId = 1;
  string statusId = 2;

}

message UpdateStatusRequest {
  string partyroutingprofileId = 1;
  string statusId = 2;
  UpdateStatusRequest updateStatusRequest = 3;

}

